dummy_service/dev/ingress/dummy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izota-dummy-ingress
  namespace: dev-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60s"
spec:
  ingressClassName: nginx
  rules:
    - host: dev-frontend-izota.mpire.asia
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: izota-dummy-service
                port:
                  number: 8080
